--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(server CXX)
 
 # 定义变量
 set(BUILD_PATH ${PROJECT_SOURCE_DIR})                       # 二进制文件输出路径
-set(LINK_LIB event event_openssl ssl crypto mysqlclient jsoncpp)       # 链接动态库列表
+set(LINK_LIB event event_openssl ssl crypto mysqlclient jsoncpp spdlog fmt)       # 链接动态库列表 Dockerfile构建镜像时需要fmt，而本地编译不需要
 
 # 生成可执行文件
 # 搜索源文件
-aux_source_directory(${PROJECT_SOURCE_DIR} SRC_LIST)
+aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
 # 包含头文件
 include_directories(${PROJECT_SOURCE_DIR}/include)
 # 设置输出路径
@@ -17,8 +17,7 @@ add_executable(test ${SRC_LIST})
 
 # 链接第三方库
 # 链接库依赖文件
-include_directories(/usr/include/jsoncpp/)
-link_directories(/usr/local/lib)
+
 # 链接系统动态库
 target_link_libraries(test ${LINK_LIB})
 
